Moved width-container to own folder Ensured contents are aligned in the center

--- a/src/components/container/width-container/width-container.css
+++ b/src/components/container/width-container/width-container.css
@@ -3,5 +3,8 @@
     padding: 0 10px;
     min-width: 600px;
     max-width: 1000px;
-    margin: 0 auto;
+    margin: auto;
+    height: 100%;
+    display: grid;
+    justify-self: center;
 }
